--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -31,7 +31,8 @@
   border-radius: 5px;
   margin-right: 50px;
   object-fit: contain;
-
+  padding: 5px;
+  border: 1px solid rgba(116, 116, 116, 0.2);
 }
 .project-info {
   display: flex;
@@ -67,6 +68,8 @@
     margin: 0;
     margin-bottom: 20px;
     max-height: 300px;
+    padding: 5px;
+    border: 1px solid rgba(116, 116, 116, 0.2);
   }
 
   .project-info {
