--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -102,14 +102,7 @@
   justify-content: flex-end;
   padding: 0;
   margin: 0;
-}
-
-.tag-label {
-  padding: 5px;
-  margin-right: 5px;
-  border-radius: 5px;
   margin-top: 20px;
-  font-size: 14px;
 }
 
 .tag {
@@ -118,6 +111,7 @@
   padding: 5px;
   margin-right: 5px;
   border-radius: 5px;
-  margin-top: 20px;
   font-size: 14px;
+  display: flex;
+  align-items: center;
 }
